--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,19 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         LWP-Simple-Post
-version:      0.04
-version_from: lib/LWP/Simple/Post.pm
-installdirs:  site
+---
+abstract: 'Single-method POST requests'
+author:
+  - 'Peter Sergeant <pete@clueball.com>'
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.102343, CPAN::Meta::Converter version 2.102400'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: LWP-Simple-Post
 requires:
-    LWP:                           0.01
-    Test::More:                    0.01
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  LWP: 0.01
+  Test::More: 0.01
+  parent: 0.01
+version: 0.05
